--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
     <section class="footer">
         <div class="box-container">
             <div class="box">
-                <h3> APNA Grocery <i class="fas fa-shopping-basket"></i> </h3>
+                <h3> MY Grocery <i class="fas fa-shopping-basket"></i> </h3>
                 <p>Life is like waiting in line at the grocery store. You wait, you slowly move forward, you pay the price, then you exit unsatisfied and broke.</p>
                 <div class="share">
                     <a href="#" class="fab fa-facebook-f"></a>
